--- a/package.json
+++ b/package.json
@@ -21,17 +21,16 @@
   },
   "homepage": "https://github.com/nash3691215/nash369#readme",
   "dependencies": {
-    "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^25.0.8",
     "@types/react": "^19.2.8",
     "next": "^16.1.2",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "tailwindcss": "^3.4.19",
     "typescript": "^5.9.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.23",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.18"
+    "postcss": "^8.5.6"
   }
 }
